--- a/Client Web/webMshipper/pages/Vehicles/Create.html
+++ b/Client Web/webMshipper/pages/Vehicles/Create.html
@@ -23,6 +23,11 @@
                                     </div>
 
                                     <div class="form-group">
+                                        <label>Biển số xe</label>
+                                        <input ng-model="numberPlate" class="form-control" placeholder="51C-79157">
+                                    </div>
+
+                                    <div class="form-group">
                                         <label>Tải Trọng (kg)</label>
                                         <input ng-model="weigh" class="form-control" type="number">
                                     </div>
@@ -30,11 +35,6 @@
                                     <div class="form-group">
                                         <label>Thể Tích (l)</label>
                                         <input ng-model="volume" class="form-control" type="number">
-                                    </div>
-
-                                    <div ng-if="showNumber" class="form-group">
-                                        <label>Số Lượng Phương Tiện</label>
-                                        <input ng-model="number" class="form-control" type="number" min="1" value="1">
                                     </div>
 
                                     <div class="form-group">
