--- a/Client Web/webMshipper/pages/Vehicles/Main.html
+++ b/Client Web/webMshipper/pages/Vehicles/Main.html
@@ -3,7 +3,7 @@
         <div id="AccountShow">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Quản Lý Mặt Hàng</h1>
+                    <h1 class="page-header">Quản Lý Phương Tiện</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
