--- a/Client Web/webMshipper/pages/Reports/Main.html
+++ b/Client Web/webMshipper/pages/Reports/Main.html
@@ -67,7 +67,9 @@
             </div>
 
             <div class="row">
-                <canvas id="myChart" width="400" height="400"></canvas>
+                <div class="col-sm-4">
+                    <canvas id="myChart" width="400" height="400"></canvas>
+                </div>
             </div>
             <!-- /.row -->
         </div>
